--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag simplewebapp:${{github.run_id}}
+      
+    - name: Tag the Docker image
+      run: docker tag simplewebapp:${{github.run_id}} jhginit/simplewebapp:${{github.run_id}}
+      
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        
+    - name: Push the Docker image
+      run: docker push jhginit/simplewebapp:${{github.run_id}}
